# kartka_rs

./: Cargo.toml  README.md  flake.nix
src/: main.rs
