[package]
name = "kartka_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
clap = { version = "4.5.27", features = ["derive"] }
eyre = "0.6"
jiff = "0.1"
jsonpath-rust = "0.7"
reqwest = { version = "0.12", features = ["json"] }
rusty-tesseract = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
