[package]
name = "kartka"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
eyre = "0.6"
inquire = "0.7.5"
jiff = "0.1"
jsonpath-rust = "0.7"
rusty-tesseract = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
toml = "0.8"
